--- a/lcd_src_v1.9/makefile
+++ b/lcd_src_v1.9/makefile
@@ -57,6 +57,8 @@ CSRCS   = main.c           \
           snake.c          \
           eeprom.c         \
           i2c.c            \
+          timer.c            \
+          buzzer.c            \
           hw.c
           
           
